Oct-update contents

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						<div class="row">
 							<div class="col-4 col-12-mobile">
 								<article class="item">
-									<a href="pages/journeydevops.html" class="image fit"><img src="images/comingsoon.jpg" alt="" /></a>
+									<a href="pages/journeydevops.html" class="image fit"><img src="images/journeydevops.jpg" alt="" /></a>
 									<header>
 										<h3>My Journey into DevOps</h3>
 									</header>
@@ -131,13 +131,13 @@
 						<div class="row">
 							<div class="col-4 col-12-mobile">
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/paint1.JPG" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/paint1.JPG" alt="" /></a>
 									<header>
 										<h3>Starting of Berserk painting</h3>
 									</header>
 								</article>
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/paint4.JPG" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/paint4.JPG" alt="" /></a>
 									<header>
 										<h3>Naruto Painting</h3>
 									</header>
@@ -145,13 +145,13 @@
 							</div>
 							<div class="col-4 col-12-mobile">
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/paint2.jpg" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/paint2.jpg" alt="" /></a>
 									<header>
 										<h3>Berserk Painting halfway</h3>
 									</header>
 								</article>
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/pencil1.jpg" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/pencil1.jpg" alt="" /></a>
 									<header>
 										<h3>Concept Sketch</h3>
 									</header>
@@ -159,13 +159,13 @@
 							</div>
 							<div class="col-4 col-12-mobile">
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/paint3.jpg" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/paint3.jpg" alt="" /></a>
 									<header>
 										<h3>Beserk piece complete</h3>
 									</header>
 								</article>
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/pencil2.jpg" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/pencil2.jpg" alt="" /></a>
 									<header>
 										<h3>Bleach Sketch</h3>
 									</header>
@@ -173,13 +173,13 @@
 							</div>
 							<div class="col-4 col-12-mobile">
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/pencil3.jpg" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/pencil3.jpg" alt="" /></a>
 									<header>
 										<h3>Concept Sketches</h3>
 									</header>
 								</article>
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/pencil4.jpg" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/pencil4.jpg" alt="" /></a>
 									<header>
 										<h3>Koi Fish Sketch</h3>
 									</header>
@@ -187,13 +187,13 @@
 							</div>
 							<div class="col-4 col-12-mobile">
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/pheonix.jpg" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/pheonix.jpg" alt="" /></a>
 									<header>
 										<h3>Anime Sketch</h3>
 									</header>
 								</article>
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/anime1.jpg" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/anime1.jpg" alt="" /></a>
 									<header>
 										<h3>Anime Sketch</h3>
 									</header>
@@ -201,21 +201,13 @@
 							</div>
 							<div class="col-4 col-12-mobile">
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/pastel1.jpg" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/pastel1.jpg" alt="" /></a>
 									<header>
 										<h3>Pastel Sketch</h3>
 									</header>
 								</article>
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/pastel2.jpg" alt="" /></a>
-									<header>
-										<h3>Pastel Sketch</h3>
-									</header>
-								</article>
-							</div>
-							<div class="col-4 col-12-mobile">
-								<article class="item">
-									<a href="#" class="image fit"><img src="images/pastel3.jpg" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/pastel2.jpg" alt="" /></a>
 									<header>
 										<h3>Pastel Sketch</h3>
 									</header>
@@ -223,7 +215,15 @@
 							</div>
 							<div class="col-4 col-12-mobile">
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/vangogh2.jpg" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/pastel3.jpg" alt="" /></a>
+									<header>
+										<h3>Pastel Sketch</h3>
+									</header>
+								</article>
+							</div>
+							<div class="col-4 col-12-mobile">
+								<article class="item">
+									<a href="#random-artwork" class="image fit"><img src="images/vangogh2.jpg" alt="" /></a>
 									<header>
 										<h3> Watercolor Sketch</h3>
 									</header>
@@ -231,7 +231,7 @@
 							</div>
 							<div class="col-4 col-12-mobile">
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/vangogh.jpg" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/vangogh.jpg" alt="" /></a>
 									<header>
 										<h3>Van Gogh Sketch</h3>
 									</header>
@@ -250,9 +250,9 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#about" class="center"><img src="images/aboutme.PNG" alt="" style="width:100px;height:100px;"/></a>
 
-							<p>Brief intro desciption</p>
+							<p> I like technology, drawing, painting, learning new things and taking on whatever life decides to throw at me &#128556;</p>
 
 						</div>
 					</section>
