fixing missing image

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 							</div>
 							<div class="col-4 col-12-mobile">
 								<article class="item">
-									<a href="#random-artwork" class="image fit"><img src="images/paint2.jpg" alt="" /></a>
+									<a href="#random-artwork" class="image fit"><img src="images/paint2.JPG" alt="" /></a>
 									<header>
 										<h3>Berserk Painting halfway</h3>
 									</header>
